css align button fixed

--- a/Code/position/Staff/css/dashboard.css
+++ b/Code/position/Staff/css/dashboard.css
@@ -3,3 +3,8 @@
     background-position: center center;    
 }
 
+@media only screen and (max-width: 600px) {
+    .button-position {
+        position: relative;
+    }
+  }
